# metidos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  STYLE.md  SUPPORT.md  UBIQUITOUS_LANGUAGE.md  agent-todo.md  agents-todo.md  biome.json  bun-plugin-react-compiler.ts  bunfig.toml  electrobun.config.ts  package.json  taplo.toml  titus-tools.Modelfile  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.md  release.yml
.tasks/: README.md  commit.md  research.md  style.md  todo.md
.wiki/: 2026-04-11-opt01-baseline-benchmark.md  2026-04-11-optimization-proposals.md  2026-04-12-metidos-tool-load-benchmark-baseline.md  2026-04-12-project-audit.md  2026-04-16-mainview-accessibility-audit.md  app-data-schema-migration-invariants.md  ci-private-secret-audit.md  codex-via-pi-wiring.md  cron-concurrency-cap.md  cron-duration-saturation-telemetry.md  dependency-declaration-audit.md  execution-boundary-hardening.md  git-access-toolset.md  git-background-preemption-churn.md  index.md  karpathy-llm-wiki-pattern.md  local-auth-hardening.md  log.md  mainview-accessibility-standards.md  mainview-accessibility-status.md  mainview-cacheable-asset-serving-path.md  mainview-derived-state-memo-cleanup.md  mainview-project-worktree-git-history-controllers.md  mainview-rpc-payload-summary.md  mainview-shell-orchestration-seam.md  mainview-thread-status-controller.md  mainview-transcript-pipeline-seam.md  nvidia-build-via-pi-configuration.md  ollama-via-pi-configuration.md  openrouter-via-pi-configuration.md  optimization-execution-proposal.md  package-script-reference-audit.md  performance-validation-workflow.md  pi-coding-agent-migration.md  plugin-capability-gate-inventory.md  plugin-sidecar-ingress-security-concurrency-audit.md  plugin-sidecar-local-sqlite-spike.md  plugin-sidecar-websocket-ownership-spike.md  (+15 more)
native/xmloxide/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  Makefile  README.md
native/xmloxide-wasm/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  build.ts
native/xmloxide-wasm/src/: lib.rs
native/xmloxide/.claude/skills/publish/: SKILL.md
native/xmloxide/.github/: pull_request_template.md
native/xmloxide/.github/workflows/: ci.yml  compat.yml  release.yml
native/xmloxide/benches/: comparison_bench.rs  ecosystem_bench.rs  parser_bench.rs
native/xmloxide/benches/fixtures/: atom_feed.xml  maven_pom.xml  svg_drawing.xml  xhtml_page.xml
native/xmloxide/examples/: basic_parse.rs  c14n.rs  error_recovery.rs  ffi_usage.c  html_parse.rs  push_parser.rs  reader.rs  sax_streaming.rs  serialize.rs  validation.rs  xinclude.rs  xpath_query.rs
native/xmloxide/fuzz/: Cargo.toml
native/xmloxide/fuzz/fuzz_targets/: fuzz_html5_fragment.rs  fuzz_html5_parse.rs  fuzz_html_parse.rs  fuzz_push.rs  fuzz_reader.rs  fuzz_roundtrip.rs  fuzz_sax.rs  fuzz_schematron.rs  fuzz_validation.rs  fuzz_xml_parse.rs  fuzz_xpath.rs
native/xmloxide/include/: libxml2_compat.h  xmloxide.h
native/xmloxide/pyxmloxide/: Cargo.toml
native/xmloxide/pyxmloxide/src/: lib.rs
native/xmloxide/scripts/: download-conformance-suite.sh  download-html5lib-tests.sh  download-libxml2-tests.sh  install-hooks.sh  pre-commit
native/xmloxide/src/: async_xml.rs  lib.rs
native/xmloxide/src/catalog/: mod.rs
native/xmloxide/src/css/: eval.rs  mod.rs  parser.rs  types.rs
native/xmloxide/src/encoding/: mod.rs
native/xmloxide/src/error/: mod.rs
native/xmloxide/src/ffi/: c14n.rs  catalog.rs  css.rs  document.rs  html5.rs  mod.rs  push.rs  reader.rs  sax.rs  serial.rs  strings.rs  tree.rs  validation.rs  xinclude.rs  xpath.rs
native/xmloxide/src/html/: entities.rs  mod.rs
native/xmloxide/src/html5/: entities.rs  mod.rs  sax.rs  tokenizer.rs  tree_builder.rs
native/xmloxide/src/parser/: input.rs  mod.rs  push.rs  xml.rs
native/xmloxide/src/reader/: mod.rs
native/xmloxide/src/sax/: mod.rs
native/xmloxide/src/serde_xml/: de.rs  error.rs  mod.rs  ser.rs
native/xmloxide/src/serial/: c14n.rs  html.rs  mod.rs  xml.rs
native/xmloxide/src/tree/: mod.rs  node.rs
native/xmloxide/src/util/: dict.rs  mod.rs  qname.rs
native/xmloxide/src/validation/: dtd.rs  mod.rs  relaxng.rs  schematron.rs  xsd.rs
native/xmloxide/src/xinclude/: mod.rs
native/xmloxide/src/xpath/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  regex.rs  types.rs
native/xmloxide/tests/: c14n_conformance.rs  conformance.rs  entity_resolver.rs  ffi_tests.rs  html5_integration.rs  html5lib_tokenizer.rs  html5lib_tree_construction.rs  libxml2_compat.rs  property_tests.rs  real_world_xml.rs  schematron.rs  security.rs  ubl_validation.rs
native/xmloxide/tests/data/c14n_w3c/: c14n10_3_3_input.xml  excc14n_2_1_enveloped_expected.xml  excc14n_2_1_enveloped_input.xml  excc14n_2_1_standalone_expected.xml  excc14n_2_2_expected.xml  excc14n_2_2_input1.xml  excc14n_2_2_input2.xml
native/xmloxide/tests/libxml2-compat/: BASELINE.md
native/xmloxide/xmloxide-wasm/: Cargo.toml
native/xmloxide/xmloxide-wasm/src/: lib.rs
(+1519 files in other folders)
