[package]
name = "metidos-xmloxide-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
xmloxide = { path = "../xmloxide", default-features = false }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
