[package]
name = "xmloxide-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.xmloxide]
path = ".."

[[bin]]
name = "fuzz_xml_parse"
path = "fuzz_targets/fuzz_xml_parse.rs"
doc = false

[[bin]]
name = "fuzz_html_parse"
path = "fuzz_targets/fuzz_html_parse.rs"
doc = false

[[bin]]
name = "fuzz_xpath"
path = "fuzz_targets/fuzz_xpath.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_sax"
path = "fuzz_targets/fuzz_sax.rs"
doc = false

[[bin]]
name = "fuzz_reader"
path = "fuzz_targets/fuzz_reader.rs"
doc = false

[[bin]]
name = "fuzz_push"
path = "fuzz_targets/fuzz_push.rs"
doc = false

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
doc = false

[[bin]]
name = "fuzz_html5_parse"
path = "fuzz_targets/fuzz_html5_parse.rs"
doc = false

[[bin]]
name = "fuzz_html5_fragment"
path = "fuzz_targets/fuzz_html5_fragment.rs"
doc = false

[[bin]]
name = "fuzz_schematron"
path = "fuzz_targets/fuzz_schematron.rs"
doc = false

[workspace]
members = ["."]
