[package]
name = "pyxmloxide"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Python bindings for xmloxide — memory-safe XML/HTML parsing"
publish = false

[lib]
name = "pyxmloxide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
xmloxide = { path = ".." }
