[package]
name = "xmloxide-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for xmloxide — memory-safe XML/HTML parsing in the browser"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
xmloxide = { path = "..", default-features = false }
